clusters/cluster1/hermes/kevin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hermes-kevin
  labels:
    managed-by: flux
